# Online-Cinema

./: .env.example  README.md  docker-compose.yml  pyproject.toml
admin_service/: Dockerfile  README.md  nginx.conf  requirements.txt
auth_service/: Makefile  alembic.ini  pyproject.toml  start.sh
auth_service/alembic/: env.py
auth_service/alembic/versions/: 01a74ea48959_init.py  0bedb03692bc_init.py  0cefbac042d1_add_premium_model.py  3ee2673ed582_fix_premium_model.py  47150ca78577_add_premium_fielt_to_user.py  6ff9f10808fe_fix_premium_model2.py  f5370991295b_device_type_added.py
auth_service/nginx/: nginx.conf
auth_service/nginx/configs/: site.conf
auth_service/src/: Dockerfile  __init__.py  main.py
auth_service/src/api/: auth.py  premium.py  roles.py
auth_service/src/core/: config.py
auth_service/src/db/: db_utils.py  pagination.py  session_maker.py
auth_service/src/models/: entity.py
auth_service/src/schemas/: entity.py
auth_service/src/services/: async_pg_repository.py  async_redis_repository.py  cli.py  role_service.py  user_service.py
auth_service/src/utils/: limit_of_requests.py  role_permissions.py
auth_service/tests/: .env.example  Dockerfile  conftest.py  docker-compose.yaml  settings.py  start.sh
auth_service/tests/fixtures/: pg_data.py
auth_service/tests/src/: test_auth.py  test_roles.py
auth_service/tests/test_data/: schemes.py
auth_service/tests/utils/: backoff.py  wait_for_pg.py  wait_for_redis.py
base_config/: dependencies.py  lifespan.py  (+1 more)
billing_service/: .gitignore  Dockerfile  README.md  gunicorn.py  main.py  pyproject.toml  start.sh
billing_service/alembic/: env.py
billing_service/alembic/versions/: 35256b629f12_remove_subscription_add_premium.py  95018f47eb46_init.py  c7287889b986_init.py
billing_service/api/v1/: manage.py  order.py  subscription.py
billing_service/core/: config.py
billing_service/db/: db_utils.py  redis_db.py  session_maker.py
billing_service/dependencies/: rabbitmq_connection.py
billing_service/models/: entity.py
billing_service/schemas/: entity.py
billing_service/services/: async_data_repository.py  async_pg_repository.py  auth_service.py  manage_service.py  message_service.py  order_service.py  payment_service.py  token_service.py  user_service.py  yookassa_service.py
billing_service/tests/: conftest.py  test_order.py  test_payment_notification.py  test_status_change.py
billing_worker/: main.py  pyproject.toml
billing_worker/config/: settings.py
billing_worker/consumers/: base_consumer.py  film_consumer.py  subscription_consumer.py
billing_worker/dependencies/: rabbitmq_connection.py
billing_worker/infra/: Dockerfile
billing_worker/services/: set_film_to_user.py  set_premium_status.py
consumer_messages/: main.py  pyproject.toml
consumer_messages/config/: broker_connection.py  settings.py
consumer_messages/consumers/: base_consumer.py  instant_consumer.py  payment_failed_consumer.py  payment_success_consumer.py
consumer_messages/dependencies/: __init__.py  dependencies.py
consumer_messages/infra/: Dockerfile
consumer_messages/services/: broker_message_service.py  email_service.py
consumer_messages/templates/email/: failed_film_payment.html  failed_payment.html  instant.html  successful_film_payment.html  successful_payment.html  welcome.html
consumer_notification_recorder/: main.py  pyproject.toml
consumer_notification_recorder/config/: broker_connection.py  postgresql.py  settings.py
consumer_notification_recorder/consumers/: base_consumer.py  notification_consumer.py
consumer_notification_recorder/infra/: Dockerfile
consumer_notification_recorder/models/: notification_models.py
consumer_notification_recorder/services/: notification_recorder_service.py  postgresql_base.py
content_service/: .gitignore  Makefile  README.md  pyproject.toml
content_service/etl/: Dockerfile  backoff.py  data_extractor.py  data_loader.py  data_transformer.py  dump.sql  etl.py  index_manager.py  indices.py  log.py  models.py  pyproject.toml  queries.py  run_etl.py  settings.py
content_service/etl/state/: etl_state.py  redis_state_storage.py
content_service/nginx/configs/: site.conf
content_service/src/: Dockerfile  README.md  gunicorn.py  pyproject.toml  start.sh
content_service/src/api/v1/: films.py  genres.py  persons.py
content_service/src/core/: config.py  main.py  pagination.py
content_service/src/db/: async_search_engine.py  elastic.py  elastic_async_search_engine.py
content_service/src/models/: film.py  genre.py  person.py
content_service/src/services/: base_service.py  bearer.py  film.py  genres.py  permission_service.py  persons.py
content_service/src/utils/: limit_of_requests.py
content_service/tasks/: 00_review.md  01_SOLID_ES.md  02_SOLID_redis.md  03_SOLID_views.md  04_functional_test_infra.md  05_functional_test_film.md  06_functional_test_person.md  07_functional_test_genre.md  08_functional_test_search.md
content_service/tests/functional/: .env.example  Dockerfile  conftest.py  docker-compose.yml  pyproject.toml  settings.py  start.sh
content_service/tests/functional/fixtures/: es_data.py  es_utils.py
content_service/tests/functional/src/: test_films.py  test_genres.py  test_persons.py
content_service/tests/functional/testdata/: film_data.py  genre_data.py  indices.py  models.py  person_data.py
content_service/tests/functional/utils/: backoff.py  es_utils.py  wait_for_es.py  wait_for_redis.py
notification_gen_app/: main.py  pyproject.toml
notification_gen_app/api/v1/: dependencies.py
notification_gen_app/api/v1/endpoints/: messages.py  periodic_messages.py
notification_gen_app/config/: initialization.py  scheduler_settings.py  settings.py
notification_gen_app/infra/: Dockerfile
notification_gen_app/schemas/: messages.py
notification_gen_app/services/: broker_service.py  messages.py  periodic_messages.py
notification_gen_app/utils/: short_links.py
notification_rabbitmq_init/: main.py  pyproject.toml
notification_rabbitmq_init/infra/: Dockerfile
notification_rabbitmq_init/services/: rabbitmq_init.py
(+88 files in other folders)
