[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["NikolaySolop <nikolay.solop@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
pika = "^1.3.2"
aio-pika = "^9.4.3"
pydantic = {extras = ["email"], version = "^2.9.2"}
pyjwt = "^2.9.0"
itsdangerous = "^2.2.0"
orjson = "^3.10.11"
sqlalchemy = "2.0.36"
asyncpg = "0.30.0"
aiosmtplib = "^3.0.2"
jinja2 = "3.1.4"
apscheduler = "^3.10.4"
redis = "^5.2.0"
gunicorn = "^23.0.0"
authlib = "^1.3.2"
aiohttp = "^3.11.7"
autopep8 = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
