[tool.poetry]
name = "auth-spint-1"
version = "0.1.0"
description = "authentication service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "auth_spint_1"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
asyncpg = "^0.29.0"
peewee = "^3.17.6"
pony = "^0.7.17"
redis = "^5.0.8"
alembic = "^1.13.2"
passlib = "^1.7.4"
werkzeug = "^3.0.4"
gunicorn = "^23.0.0"
uvicorn = "^0.30.6"
fastapi = "^0.112.2"
pydantic = {extras = ["email"], version = "^2.9.1"}
pydantic-settings = "^2.4.0"
fastapi-cache2 = "^0.2.2"
greenlet = "^3.0.3"
orjson = "^3.10.7"
aioredis = "^2.0.1"
python-jose = "^3.3.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
multidict = "^6.0.5"
aiohttp = "^3.10.5"
faker = "^28.1.0"
httpx = "^0.27.2"
opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
opentelemetry-exporter-jaeger = "^1.21.0"
authlib = "^1.3.2"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"