[tool.poetry]
name = "billing-worker"
version = "0.1.0"
description = ""
authors = ["NikolaySolop <nikolay.solop@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.2"
pydantic-settings = "^2.6.1"
aio-pika = "^9.5.1"
aiohttp = "^3.11.8"
fastapi = "^0.115.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
