[tool.poetry]
name = "consumer-messages"
version = "0.1.0"
description = ""
authors = ["NikolaySolop <nikolay.solop@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.6.1"
jinja2 = "^3.1.4"
aiosmtplib = "^3.0.2"
aio-pika = "^9.4.3"
fastapi = "^0.115.4"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
