[tool.poetry]
name = "async-api-sprint-2"
version = "0.1.0"
description = ""
authors = ["Artem Volinets <artemvol1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-jose = "3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
