[tool.poetry]
name = "notification-gen-app"
version = "0.1.0"
description = ""
authors = ["NikolaySolop <nikolay.solop@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
starlette = "^0.41.2"
pydantic-settings = "^2.6.0"
pika = "^1.3.2"
pika-stubs = "^0.1.3"
itsdangerous = "^2.2.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
orjson = "^3.10.10"
pyjwt = "^2.9.0"
aio-pika = "^9.4.3"
apscheduler = "^3.10.4"
redis = "^5.2.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
