[tool.poetry]
name = "billing-rabbitmq-init"
version = "0.1.0"
description = ""
authors = ["NikolaySolop <nikolay.solop@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.6.1"
pydantic = "^2.10.2"
aio-pika = "^9.5.1"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
